Tue Sep 10 12:56:04 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cc1_metric.rb : Fix code metric measurement
	  so that metrics of the function defined in the header file can be
	  measured.

Fri Sep  6 18:46:53 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cpp_check.rb : Abbreviate wordy names.
	* lib/adlint/exam/c_builtin/cc1_code.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_metric.rb : Ditto.
	* lib/adlint/exam/c_builtin/cpp_code.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_check_shima.rb : Ditto.
	* lib/adlint/exam/c_builtin/cpp_check_shima.rb : Ditto.

Fri Sep  6 14:12:31 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/step_definitions/code_check_steps.rb : Fix useless method
	  call in spec validation of the Cucumber step definition.

Fri Sep  6 13:29:02 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam.rb : Relax limitation of filename of the exam-package
	  catalog.

Tue Sep  3 17:56:45 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cc1_check.rb : Abbreviate wordy names.
	* share/doc/developers_guide_ja.texi : Ditto.

Fri Aug 30 15:46:16 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.1
	  - Refine Examination.def_registrant_phase so that code check in the
	    optional examination package can be derived from the builtin code
	    check class.

Fri Aug 30 15:12:10 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam.rb : Refine Examination.def_registrant_phase so that
	  code check in the optional examination package can be derived from
	  the builtin code check class.

Wed Aug 28 10:51:30 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.0
	  - Support experimental context-tracing feature so that the warning
	    message can be complemented with the context messages.

Tue Aug 27 19:35:30 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
