@@ -1,3 +1,8 @@
+Fri Sep 13 15:53:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/exam/c_builtin/cc1_metric.rb : Fix code metric measurement
+	  in order to output FL_STMT and FL_FUNC metrics correctly.
+
 Tue Sep 10 12:56:04 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* lib/adlint/exam/c_builtin/cc1_metric.rb : Fix code metric measurement
